--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,10 +3,10 @@
   padding: 0px;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-}
+/* body{ */
+/*    display: flex; */
+/*    flex-direction: column; */
+/*}
 .header{
     height: 70px; /* height: 70px; 20vh*/
     width: 100vw;
@@ -50,7 +50,8 @@ main{
     height: 80vh;
 }
 
-@media (max-width: 600px){
+/* 600px */
+@media (max-width: 1200px){
   .main {
     flex-direction: column;
   }
