--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,68 +1,72 @@
+/* header上の謎の余白はcode中の"全角スペース"(comment部分中含む)が原因? (ref: https://ogatanoyarou.com/index.php/2021/03/09/154/) */
 * {
   margin: 0px;
   padding: 0px;
 }
 
- body{ 
- display: flex;
-　flex-direction: column;
-　}
-.header{
-    height: 20vh; /* height: 70px; 20vh */
-    min-height: 600px;
-    width: 100%;
-    min-width: 600px;
-    background-color: #eee;
-    text-align: center;
+body {
+    display: flex;
+    flex-direction: column;
 }
 
-.glovalNavigation{
-    height: 15vh;
+li {
+  list-style: none;
+  float: right;  
+  /* 上, 右, 下, 左のpaddingを40px, 20px, 20px, 20pxにしてください */
+  padding: 35px 40px 20px 20px;
+}
+
+.header {
+  background-color: #eee;
+  color: #fff;
+  height: 90px;
+}
+
+/* header-logoの文字の大きさを36px, floatプロパティをleftにしてください */
+.header-logo {
+      height: 70px;
     text-align: center;
     background-color: #888;
     color: #fff;
+  
+  float: left;
+  font-size: 36px;
+/* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
+  padding: 20px 40px;
 }
 
-main{
-    display: flex;
-    /* min-height: 100vh; */
-    margin: 10px 0 10px 0;
-    right: 0px;
-/* */
-  padding:  10%;             /* 余白指定 10px */
+/* ################################### */
+.main {
+    background-color: #888;     /* 背景色指定 */
+    padding:  10%;             /* 余白指定 10px */
     height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
     max-wigth:100%;
     min-wigth:100%;
     height: auto;        /* 縦横比を保つ */
+  
+  display: grid;
+  grid-gap 2px 2px;
+  grid-template-columns: 3fr 2fr; /* 2:1 列(横)分け間隔 */
+  grid-template-rows: 3fr 1fr; /* 4:3 行(縦)分け間隔 */
 }
 
-.content-area{
-  background: #eee;
-     width: 40vw;　/* width: 40% だと"親要素に対して"40%の縮尺となる "vw"(viewport width)は画面の横幅に対する縮尺 */
-     height: 55vh;
-}
-/* .content{ */
- /*    display: grid 2fr 1fr; */
-/*     gap: 2%; */
-/*     flex: 1; */
-/*     background-color: #eee; */
-/*     text-align: center; */
-/*     margin: 0 10px 0 10px; */
-/* } */
-.localNavigation{
-    display: grid;
+/* ### */
+.content{
     flex: 1;
+    background-color: #eee;
+    text-align: center;
+    margin-right: 10px;
+}
+.localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 60vw;
-    height: 80vh;
+    width: 450px;
 }
+/* ################################### */
 
-.footer{
-    height: 10vh;
-    width: 100vw;
-    text-align: center;
-    background-color: #eee;
+.footer {
+  background-color: #eee;
+  height: 70px;
 }
