--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ li {
 
 .header {
   background-color: #eee;
-  color: #fff;
+  color: #000;
   height: 90px;
 }
 
@@ -27,7 +27,7 @@ li {
       height: 70px;
     text-align: center;
     background-color: #888;
-    color: #fff;
+    color: #000;
   
   float: left;
   font-size: 36px;
