--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,13 +9,6 @@ body {
     flex-direction: column;
 }
 
-li {
-  list-style: none;
-  float: right;  
-  /* 上, 右, 下, 左のpaddingを40px, 20px, 20px, 20pxにしてください */
-  padding: 35px 40px 20px 20px;
-}
-
 .header {
   background-color: #eee;
   color: #000;
@@ -33,6 +26,20 @@ li {
   font-size: 36px;
 /* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
   padding: 20px 40px;
+}
+
+.glovalNavigation{
+    height: 70px;
+    text-align: center;
+    background-color: #888;
+    color: #fff;
+}
+
+li {
+  list-style: none;
+  float: right;  
+  /* 上, 右, 下, 左のpaddingを40px, 20px, 20px, 20pxにしてください */
+  padding: 35px 40px 20px 20px;
 }
 
 /* ################################### */
