--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ body {
 
 /* ################################### */
 main{
-    display: grid;
+    display: flex;
     min-height: 100vh;
     margin: 10px 0 10px 0;
 }
