--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  max-width: 800px;
+  max-width: 100vw;
   margin: 2em auto;
   display: grid;
   grid-template-columns: 3fr 1fr;
