--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@
 
 .container {
   max-width: 100%; /* 画面の横一杯にオブジェクトの横幅が広がる */
+  max-height: 100%; /* 画面の横一杯にオブジェクトの縦幅が広がる */
   margin: 2em auto;
   display: grid;
   grid-template-columns: 3fr 1fr;
@@ -18,12 +19,10 @@
  
 .container main {
   grid-area: 2/1/3/2;
-  height: 600px;
 }
  
 .container aside {
   grid-area: 2/2/3/3;
-  height: 600px;
 }
  
 .container footer {
