--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,12 @@
   grid-template-rows: repeat(3,auto);
   grid-gap: 1rem;
 }
+
+body{
+    display: flex;
+    min-height: 100vh;
+    margin: 10px 0 10px 0;
+}
  
 .container header {
 /*  grid-area: 1/1/2/3; */
