--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,8 @@ body{
 }
 main{
     display: flex;
-    max-height: 100vh;
+    min-height: 100vh; /* <- max-height 100vhにしたらmainの高さがheader並に縮んで伸びなくなった。*/
+    min-width: 100vh;
     margin: 10px 0 10px 0;
 }
 .content{
