--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ body{
 main{
     display: flex;
     min-height: 100vh; /* <- max-height 100vhにしたらmainの高さがheader並に縮んで伸びなくなった。*/
-    min-width: 100vh;
+    max-width: 100vh;
     margin: 10px 0 10px 0;
 }
 .content{
