--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,8 +15,7 @@ body{
 }
 main{
     display: flex;
-    min-height: 60vh; /* <- max-height 100vhにしたらmainの高さがheader並に縮んで伸びなくなった。*/
-    /* max-width: 100vh; <- max-width 100vhにしたらmainの幅が縮まって右に余白ができた。*/
+    min-height: 100vh;
     margin: 10px 0 10px 0;
 }
 .content{
