--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,12 @@ main{
     display: flex;
     min-height: 80vh;
     margin: 10px 0 10px 0;
+  
+  /* main全体の縦横比固定？ */  
+  width: 100%;
+  height: auto;
+  padding-top: 75%;
+    
 }
 .content{
     flex: 1;
