--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,12 +30,14 @@ main{
     text-align: center;
     margin-right: 10px;
     width: 750px;
+    height: 600px;
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
     width: 250px;
+    height: 600px;
 }
 .footer{
     height: 70px;
