--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ main{
     
 }
 .content{
-    flex: 1;
+   /* flex: 1; */ 
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
@@ -34,7 +34,7 @@ main{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 350px;
+    width: 250px;
 }
 .footer{
     height: 70px;
