--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ main{
     display: flex;
     min-height: 100vh;
     margin: 10px 0 10px 0; /* 10px 0 10px 0 */  
-  position: fixed;
+    flex-shrink: 0;
   /* main全体の縦横比固定？ */  
   /* width: 100%;　*/
   /*  height: auto; */ 
