--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,16 +16,10 @@ body{
 main{
     display: flex;
     min-height: 100vh;
-    margin: 10px 0 10px 0; /* 10px 0 10px 0 */  
-    flex-shrink: 0;
-  /* main全体の縦横比固定？ */  
-  /* width: 100%;　*/
-  /*  height: auto; */ 
-  /*  padding-top: 75%; */ 
-    
+    margin: 10px 0 10px 0;
 }
 .content{
-   /* flex: 1; */ 
+    flex: 1;
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
