--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 body{
     display: flex;
     flex-direction: column;
-    flex-shrink: 0;
 }
 .header{
     height: 70px;
@@ -20,12 +19,14 @@ main{
     margin: 10px 0 10px 0;
         width: 100px;
     flex-shrink: 0;
+    flex-grow: 0;
 }
 .content{
-    flex: 1;
+    /* flex: 1; */
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
+    width: 550px; /* */
 }
 .localNavigation{
     text-align: center;
