--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,10 +30,11 @@ main{
     width: 1000px; /* */
 }
 .localNavigation{
+    flex: 1;
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 550px;
+    /* width: 250px; */
 }
 .footer{
     height: 70px;
