--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,6 @@ body{
     display: flex;
     flex-direction: column;
 }
-
 .header{
     height: 70px;
     text-align: center;
@@ -19,25 +18,20 @@ main{
     min-height: 100vh;
     margin: 10px 0 10px 0;
 }
-
-
 .content{
-    /* flex: 1; */
+    flex: 1;
     background-color: #eee;
     text-align: center;
-    /* margin-right: 10px;　*/
-    width: 500px; /* */
+    margin-right: 10px;
 }
 .localNavigation{
-    flex: 1;
     text-align: center;
     background-color: #888;
     color: #fff;
-    margin-left: 10px;
-    /* width: 250px; */
+    width: 250px;
 }
 .footer{
-    height: 100px;
+    height: 70px;
     text-align: center;
     background-color: #eee;
 }
