--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,22 +15,21 @@ body{
 }
 main{
     display: flex;
-    min-height: 80vh;
+    min-height: 50vh;
     margin: 10px 0 10px 0;
 }
 .content{
-    flex: 1;
+    /* flex: 1; */
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
-    height: 300px;
+    width: 550px;
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
     width: 350px;
-    height: 300px;
 }
 .footer{
     height: 70px;
