--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,19 +17,21 @@ main{
     display: flex;
     min-height: 60vh;
     min-weight: 100vh;
+    /* */
     margin: 10px 0 10px 0;
 }
 .content{
     /* flex: 1; */
     background-color: #eee;
     text-align: center;
-    margin-right: 10px;
+   margin-right: 10px;
     width: 550px;
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
+    margin-right 0px;
     width: 450px;
 }
 .footer{
