--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,10 +15,11 @@ body{
 }
 main{
     display: flex;
-    min-height: 60vh;
-    max-height: 80vh; /* */
+    min-height: 70vh; /* 60vh */
+    max-height: 100vh; /* 80vh */
     min-weight: 100vh;
     margin: 10px 0 10px 0;
+
 }
 .content{
     /* flex: 1; */
