--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+* {
+	float: none;
+	position: static;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -17,7 +22,9 @@ main{
     display: flex;
     min-height: 70vh; /* 60vh */
     max-height: 100vh; /* 80vh */
-    min-weight: 100vh;
+    /* min-width: 100vh; */
+    max-width: 100%; /* */
+	height: auto; /* */
     margin: 10px 0 10px 0;
 
 }
