--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,7 @@ main{
     min-height: 70vh; /* 60vh */
     max-height: 100vh; /* 80vh */
     /* min-width: 100vh; */
-    max-width: 100%; /* */
-	height: auto; /* */
+    max-width: 80vh; /* */
     margin: 10px 0 10px 0;
 
 }
@@ -33,13 +32,15 @@ main{
     background-color: #eee;
     text-align: center;
    margin-right: 10px;
-    width: 850px;
+    width: 850px; 
+    height: auto; /* */
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
     width: 550px;
+    height: auto; /* */
 }
 .footer{
     height: 70px;
