--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,14 +32,14 @@ main{
     background-color: #eee;
     text-align: center;
    margin-right: 10px;
-    width: 850px; 
+    width: 1200px; /* 850px */
     height: auto; /* */
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 550px;
+    width: 800px; /* 550px */
     height: auto; /* */
 }
 .footer{
