--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,8 @@ main{
     display: flex;
     min-height: 70vh; /* 60vh */
     max-height: 100vh; /* 80vh */
-    /* min-width: 100vh; */
-    max-width: 100vh; /* 80vh */
+    min-width: 100vh;
+    /* max-width: 100vh; 80vh */
     margin: 10px 0 10px 0;
 
 }
@@ -32,14 +32,14 @@ main{
     background-color: #eee;
     text-align: center;
    margin-right: 10px;
-    width: 1200px; /* 850px */
+    width: 850px; /* 850px */
     height: auto; /* */
 }
 .localNavigation{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 800px; /* 550px */
+    width: 550px; /* 550px */
     height: auto; /* */
 }
 .footer{
