--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+@media screen and(max-width:767px){
+html{
+		display:block;
+}
+
 * {
 	float: none;
 	position: static;
@@ -7,12 +12,6 @@ body{
     display: flex;
     flex-direction: column;
 }
-
-@media screen and(max-width:767px){
-body{
-		display:block;
-}
-
 
 .header{
     height: 70px;
