--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 * {
 	float: none;
 	position: static;
-	width: 100%;
-	height: auto;
+	min-width: 100%; /* */
+	min-height: 100%; /* */
 }
 
 body{
