--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,6 @@
 * {
 	float: none;
 	position: static;
-	min-width: 100%; /* */
-	min-height: 100%; /* */
 }
 
 body{
@@ -14,12 +12,14 @@ body{
     height: 70px;
     text-align: center;
     background-color: #eee;
+	wigth: 1410px; /* */
 }
 .glovalNavigation{
     height: 70px;
     text-align: center;
     background-color: #888;
     color: #fff;
+	wigth: 1410px; /* */
 }
 main{
     display: flex;
@@ -49,4 +49,5 @@ main{
     height: 70px;
     text-align: center;
     background-color: #eee;
+	wigth: 1410px; /* */
 }
