--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,8 @@ main{
     /* flex: 1; */
     background-color: #eee;
     text-align: center;
-   margin-right: 10px;
+    margin-right: 10px;
+    margin-left: 30px;             /* */
     width: 850px; /* 850px */
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -41,6 +42,7 @@ main{
     background-color: #888;
     color: #fff;
     width: 550px; /* 550px */
+    margin-right: 30px;           /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .footer{
