--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,8 @@ main{
     text-align: center;
     margin-right: 10px;
     margin-left: 30px;             /* */
+    margin-top: 20px;             /* */
+    margin-bottom: 20px;             /* */
     width: 850px; /* 850px */
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -43,6 +45,8 @@ main{
     color: #fff;
     width: 550px; /* 550px */
     margin-right: 30px;           /* */
+    margin-top: 20px;             /* */
+    margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .footer{
