--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@ body{
     height: 70px;
     text-align: center;
     background-color: #eee;
+    margin: 10px 0 10px 0; /* */
 }
 .glovalNavigation{
     height: 70px;
@@ -25,7 +26,7 @@ main{
     max-height: 100vh; /* 80vh */
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
-    margin: 10px 0 10px 0;
+    margin: 10px 0 10px 0; /* */
 
 }
 .content{
