--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,12 @@ body{
 }
 main{
     display: flex;
-    min-height: 70vh; /* 60vh */
-    max-height: 100vh; /* 80vh */
+    /* min-height: 70vh; /* 60vh */ */
+   /*  max-height: 100vh; /* 80vh */ */
+	
+	 min-height: 100%; 
+	max-height: 100%;
+	
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
     margin: 10px 0 10px 0; /* */
