--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,11 +22,10 @@ body{
 }
 main{
     display: flex;
-    /* min-height: 70vh; /* 60vh */ */
-   /*  max-height: 100vh; /* 80vh */ */
-	
-	 min-height: 100%; 
-	max-height: 100%;
+   min-height: 70vh; /* 60vh */
+  max-height: 100vh; /* 80vh */
+
+	position: fixed; /* */
 	
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
