--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,8 @@ body{
 }
 main{
     display: flex;
-  min-height: 70vh; /* 60vh */
- max-height: 100vh; /* 80vh */
+/*  min-height: 70vh; /* 60vh */ */
+/* max-height: 100vh; /* 80vh */ */
 
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
