--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,10 @@ body{
 }
 main{
     display: flex;
+	
+	width: 1400px;
+	height: 1000px;
+	
 /*  min-height: 70vh; /* 60vh */ */
 /* max-height: 100vh; /* 80vh */ */
 
