--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ main{
     display: flex;
 	
 	width: 1400px;
-	height: 1000px;
+	height: 800px;
 	
 /*  min-height: 70vh; /* 60vh */ */
 /* max-height: 100vh; /* 80vh */ */
@@ -42,9 +42,10 @@ main{
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-    width: 850px; /* 850px */
-	height: 550px;
+  /*   width: 850px; /* 850px */ */
 	
+	width: 550px;
+	height: 500px;
 	max-width: 100%;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
@@ -53,12 +54,13 @@ main{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 550px; /* 550px */
+  /*  width: 550px; /* 550px */ */
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 
+	width: 350px;
 	height: 550px;
 	max-width: 100%;
 
