--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ main{
 
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
-    margin: 10px 0 10px 0; /* */
+   /* margin: 10px 0 10px 0;  */
 
 }
 .content{
