--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ main{
     display: flex;
 	
 	width: 1000px;
-	height: auto;
+	height: 500px;
 	
 /*  min-height: 70vh; /* 60vh */ */
 /* max-height: 100vh; /* 80vh */ */
@@ -44,8 +44,8 @@ main{
     margin-bottom: 20px;             /* */
   /*   width: 850px; /* 850px */ */
 	
-	width: 400px;
-	height: 300px;
+	width: 850px;
+	height: 500px;
 	max-width: 100%;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
@@ -60,8 +60,8 @@ main{
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 
-	width: 350px;
-	height: 300px;
+	width: 550px;
+	height: 500px;
 	max-width: 100%;
 
 }
@@ -69,4 +69,6 @@ main{
     height: 70px;
     text-align: center;
     background-color: #eee;
+	
+    margin: 10px 0 10px 0; /* */
 }
