--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,11 +39,11 @@ max-height: 100vh; /* 80vh */
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-  /*   width: 850px; /* 850px */ */
+     width: 850px; /* 850px */ 
 	
-	width: 850px;
-	height: 500px;
-	max-width: 100%;
+	/*　width: 850px;　*/
+	/*　height: 500px;　*/
+	/*　max-width: 100%;　*/
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -51,15 +51,15 @@ max-height: 100vh; /* 80vh */
     text-align: center;
     background-color: #888;
     color: #fff;
-  /*  width: 550px; /* 550px */ */
+   width: 550px; /* 550px */
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 
-	width: 550px;
-	height: 500px;
-	max-width: 100%;
+	/*　width: 550px;　*/
+	/*　height: 500px;　*/
+	/*　max-width: 100%;　*/
 
 }
 .footer{
