--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,11 +39,14 @@ max-height: 100vh; /* 80vh */
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-     width: 850px; /* 850px */ 
+   /*  width: 850px; /* 850px */ */
 	
-	/*　width: 850px;　*/
-	/*　height: 500px;　*/
-	/*　max-width: 100%;　*/
+	width: 850px;
+	height: 500px;
+	max-height: 100%;
+	max-width: 100%;
+	min-height: 100%;
+	min-width: 100%;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
