--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,8 @@ body{
 main{
     display: flex;
 	
- min-height: 70vh; /* 60vh */ 
-max-height: 100vh; /* 80vh */
+/* min-height: 70vh; /* 60vh */  */ 
+/* max-height: 100vh; /* 80vh */ */
 
     /* min-width: 100vh; */
     /* max-width: 100vh; 80vh */
@@ -39,9 +39,9 @@ max-height: 100vh; /* 80vh */
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-   /*  width: 850px; /* 850px */ */
+   /* width: 850px; /* 850px */ */
 	
-	width: 850px;
+	/*width: 850px;
 	height: 500px;
 	max-height: 100%;
 	max-width: 100%;
