--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ main{
     margin-bottom: 20px;             /* */
    /* width: 850px; /* 850px */ */
 	
-	/*width: 850px;
+	width: 850px;
 	height: 500px;
 	max-height: 100%;
 	max-width: 100%;
@@ -54,15 +54,18 @@ main{
     text-align: center;
     background-color: #888;
     color: #fff;
-   width: 550px; /* 550px */
+ /*  width: 550px; /* 550px */ */
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 
-	/*　width: 550px;　*/
-	/*　height: 500px;　*/
-	/*　max-width: 100%;　*/
+	width: 550px;
+	height: 500px;
+	max-height: 100%;
+	max-width: 100%;
+	min-height: 100%;
+	min-width: 100%;
 
 }
 .footer{
