--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,6 +48,8 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
+	min-height: 440px; */
+	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .localNavigation{
@@ -66,6 +68,8 @@ main{
 	/* max-width: 100%; */
 	/* min-height: 100%; */
 	/* min-width: 100%; */
+	
+	min-height: 440px; */
 
 }
 .footer{
