--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,9 @@
 body{
     display: flex;
     flex-direction: column;
+	
+		max-height: 1000px; */
+		max-width: 700px; */
 }
 
 .header{
@@ -47,8 +50,7 @@ main{
 	/* max-width: 100%; */
 	/* min-height: 100%; */
 	/* min-width: 100%; */
-	
-	min-height: 440px; */
+
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -68,8 +70,7 @@ main{
 	/* max-width: 100%; */
 	/* min-height: 100%; */
 	/* min-width: 100%; */
-	
-	min-height: 440px; */
+
 
 }
 .footer{
