--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,9 +6,6 @@
 body{
     display: flex;
     flex-direction: column;
-	
-		max-height: 1000px; */
-		max-width: 700px; */
 }
 
 .header{
@@ -51,6 +48,7 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
+min-width: 850px;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -71,6 +69,7 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
+min-width: 550px;	
 
 }
 .footer{
