--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,8 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-min-width: 850px;
+max-width: 100%;
+height: auto;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -69,8 +70,9 @@ min-width: 850px;
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-min-width: 550px;	
-
+max-width: 100%;	
+height: auto;
+	
 }
 .footer{
     height: 70px;
