--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-max-width: 100%;
+max-width: 850px;
 height: auto;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
@@ -70,7 +70,7 @@ height: auto;
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-max-width: 100%;	
+max-width: 550px;	
 height: auto;
 	
 }
