--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,9 +47,10 @@ main{
 	/* max-width: 100%; */
 	/* min-height: 100%; */
 	/* min-width: 100%; */
+	
+height: 80%;
+max-height: 500px;
 
-max-width: 1091px;
-height: auto;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -70,8 +71,8 @@ height: auto;
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-max-width: 702px;	
-height: auto;
+height: 80%;
+max-height: 500px;
 	
 }
 .footer{
