--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ main{
 	
 height: 80%;
 max-height: 500px;
-
+min-height: 500px;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -73,6 +73,7 @@ max-height: 500px;
 
 height: 80%;
 max-height: 500px;
+min-height: 500px;
 	
 }
 .footer{
