--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,9 +48,7 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
-height: 80%;
-max-height: 500px;
-min-height: 500px;
+height: 500px;
 	
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
@@ -71,9 +69,7 @@ min-height: 500px;
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 
-height: 80%;
-max-height: 500px;
-min-height: 500px;
+height: 500px;
 	
 }
 .footer{
