--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 * {
 	float: none;
-	position: static;
+	/* position: static; */ /* 削除 */
 }
 
 body{
@@ -48,6 +48,7 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
+	height: 500px; /* 追加 */
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .localNavigation{
@@ -67,9 +68,13 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
+	height: 500px; /* 追加 */
+	
 }
 .footer{
     height: 70px;
     text-align: center;
     background-color: #eee;
+	
+	position: fixed; /* 追加 */
 }
