--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,11 +23,9 @@ body{
 main{
     display: flex;
 	
- min-height: 70vh; /* 60vh */ 
- max-height: 100vh; /* 80vh */
+/*  min-height: 70vh; /* 60vh */ 　*/
+/*  max-height: 100vh; /* 80vh */　*/
 
-    /* min-width: 100vh; */
-    /* max-width: 100vh; 80vh */
     margin: 10px 0 10px 0;
 
 }
