--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 * {
 	float: none;
-	/* position: static; */ /* 削除 */
+	position: static;
 }
 
 body{
@@ -46,7 +46,6 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
-	height: 500px; /* 追加 */
     /* height: auto; */ /* height: auto;があると横幅に余白ができてしまう */
 }
 .localNavigation{
@@ -66,13 +65,10 @@ main{
 	/* min-height: 100%; */
 	/* min-width: 100%; */
 	
-	height: 500px; /* 追加 */
-	
 }
 .footer{
     height: 70px;
     text-align: center;
     background-color: #eee;
-	
-	position: fixed; /* 追加 */
+
 }
