--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,12 @@ max-height: 100vh; /* 80vh */
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-    width: 850px; /* 850px */
+   /* width: 850px; /* 850px */ */
+	
+	width: 66.6%;
+	max-width: 850px;
+	height: auto;
+	
 	
 	/* width: 850px; */
 	/* height: 500px; */
@@ -52,12 +57,17 @@ max-height: 100vh; /* 80vh */
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 550px; /* 550px */
+    /* width: 550px; /* 550px */ */
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 
+	width: 33.3%;
+	max-width: 550px;
+	height: auto;
+	
+	
 	/* width: 550px; */
 	/* height: 500px; */
 	/* max-height: 100%; */
