--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,14 +37,8 @@ max-height: 100vh; /* 80vh */
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-   /* width: 850px; /* 850px */ */
-	
-	width: 100%;
-	max-width: 850px;
-	height: 100%; /* */
-	max-height: 500px; /* */
-	
-	
+   width: 850px; /* 850px */
+		
 	/* width: 850px; */
 	/* height: 500px; */
 	/* max-height: 100%; */
@@ -58,16 +52,11 @@ max-height: 100vh; /* 80vh */
     text-align: center;
     background-color: #888;
     color: #fff;
-    /* width: 550px; /* 550px */ */
+    width: 550px; /* 550px */
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
-
-	width: 100%;
-	max-width: 550px;
-	height: 100%; /* */
-	max-height: 500px; /* */
 	
 	
 	/* width: 550px; */
