--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ max-height: 100vh; /* 80vh */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
    width: 850px; /* 850px */
-   height: 90%; /* 70% vh */
+   padding-top: 50%;  /* */
 		
 	/* width: 850px; */
 	/* height: 500px; */
@@ -59,7 +59,7 @@ max-height: 100vh; /* 80vh */
     margin-bottom: 20px;             /* */
    /* height: auto;  */ /* height: auto;があると横幅に余白ができてしまう */
 	
-	   height: 90%; /* 70% vh */
+	   padding-top: 50%;  /* */
 		   
 	/* width: 550px; */
 	/* height: 500px; */
