--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,8 @@ body{
 main{
     display: flex;
 	
-/*　min-height: 70vh; /* 60vh */　*/
-/*　max-height: 100vh; /* 80vh */　*/
+min-height: 70vh; /* 60vh */　
+max-height: 100vh; /* 80vh */　
 	max-width: 1000px;
 
     margin: 10px 0 10px 0;
