--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ max-height: 100vh; /* 80vh */　
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-  /*  width: 850px; /* 850px */ */
+  width: 850px; /* 850px */ 
 	
    width: 50%;  /* */	
    padding-top: 50%;  /* */
@@ -56,7 +56,7 @@ max-height: 100vh; /* 80vh */　
     text-align: center;
     background-color: #888;
     color: #fff;
-    /* width: 550px; /* 550px */ */
+    width: 550px; /* 550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
