--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,6 +27,7 @@ main{
 /* max-height: 100vh; /* 80vh */　*/　
 	max-width: 1000px;
 	max-height: 800px;  /*　*/
+	min-height: 660px;  /*　*/
 
     margin: 10px 0 10px 0;
 
