--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body{
 }
 
 .header{
-    height: 70px;
+    height: 100px;  /* 70px */
     text-align: center;
     background-color: #eee;
     margin: 10px 0 10px 0; /* */
@@ -75,7 +75,7 @@ main{
 	
 }
 .footer{
-    height: 70px;
+    height: 140px; /* 70px */
     text-align: center;
     background-color: #eee;
 }
