--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,7 +75,7 @@ main{
 	
 }
 .footer{
-    height: 140px; /* 70px */
+    height: 146px; /* 70px 140px */
     text-align: center;
     background-color: #eee;
 }
