--- a/demo.css
+++ b/demo.css
@@ -5,7 +5,7 @@
 
 /* スマホのような細長い画面では、縦並べ表示にレイアウトを変更？ */
 @media screen and(max-width:767px){
-html{
+wrapper{
       display:block;
  }
 /* ##############################################＃## */	
