--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,12 +13,20 @@ body{
     background-color: #eee;
     margin: 10px 0 10px 0; /* */
 }
+
 .glovalNavigation{
     height: 70px;
     text-align: center;
     background-color: #888;
     color: #fff;
 }
+.header-list li {
+   font-color: #fff;
+   list-style: none;
+   float: center;
+   padding: 20px 30px;
+}
+
 main{
     display: flex;
 	
