--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,12 @@ body{
     background-color: #eee;
     margin: 10px 0 10px 0; /* */
 }
+.header-logo {
+  float: center;
+  font-size: 36px;
+/* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
+  padding: 20px 40px;
+}
 
 .glovalNavigation{
     height: 70px;
@@ -20,11 +26,12 @@ body{
     background-color: #888;
     color: #fff;
 }
+
 .header-list li {
    font-color: #fff;
    list-style: none;
    float: center;
-   padding: 20px 30px;
+   padding: 35px 40px 20px 20px;
 }
 
 main{
