--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ body{
     color: #fff;
 }
 
-.header-list li {
+.glovalNavigation li {
    font-color: #fff;
    list-style: none;
    float: center;
