--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,7 @@ main{
     
     item {
     display: grid;
-    grid-template-rows: 3fr, 1fr, 1fr;
+    grid-template-rows: 3fr 1fr 1fr;
     gap: 10px;
     }
 	
