--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ body{
     color: #fff;
 }
 
-.glovalNavigation li {
+.header-list li {
 　  display: inline;
    font-color: #fff;
    list-style: none;
