--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,11 +28,12 @@ body{
 }
 
 .header-list li {
-　  display: inline;
-   font-color: #fff;
+   float: left;
    list-style: none;
-   float: center;
-   padding: 35px 40px 20px 20px;
+   font-color: #fff;
+   margin: auto;
+   text-align: center;
+  /* padding: 35px 40px 20px 20px; */
 }
 
 main{
