--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,12 +67,6 @@ main{
    /* display:flex; /* */ */
    /* flex-flow: column; /* */ */
     
-    item {
-    display: grid;
-    grid-template-rows: 3fr 1fr 1fr;
-    gap: 10px;
-    }
-	
     text-align: center;
     background-color: #888;
     color: #fff;
@@ -82,11 +76,27 @@ main{
     margin-bottom: 20px;             /* */
 	
 	 width: 40%;  /* */	
-         padding-top: 40%;  /* */
-	
-	
+         padding-top: 40%;  /* */	
+
+padding: 10px;
 }
 
+/* ##################### */
+ item {
+  display: flex;
+  flex-direction: column;
+  }
+
+.item:nth-child(1) {
+    background-color:  #eee;
+}
+.item:nth-child(2) {
+    background-color:  #eee;
+}
+.item:nth-child(3) {
+    background-color:  #eee;
+}
+/* ##################### */
 
 .footer{
     height: 165px; /* 70px 140px */
