--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,8 @@ body{
     margin: 10px 0 10px 0; /* */
 }
 .header-logo {
-  float: center;
+  float: left;
+  text-align: center;
   font-size: 36px;
 /* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
   padding: 20px 40px;
@@ -33,7 +34,7 @@ body{
    font-color: #fff;
    margin: auto;
    text-align: center;
-  /* padding: 35px 40px 20px 20px; */
+   padding: 35px 40px 20px 20px;
 }
 
 main{
@@ -78,13 +79,14 @@ main{
 	 width: 40%;  /* */	
          padding-top: 40%;  /* */	
 
+flex-direction: column;	
 padding: 10px;
 }
 
 /* ##################### */
  item {
   display: flex;
-  flex-direction: column;
+  padding: 0px;	 
   }
 
 .item:nth-child(1) {
