--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,6 +19,7 @@ body{
   font-size: 36px;
 /* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
   padding: 20px 40px;
+	margin: 0 auto;
 }
 
 .glovalNavigation{
@@ -32,7 +33,7 @@ body{
    float: left;
    list-style: none;
    font-color: #fff;
-   margin: auto;
+   margin: 0 auto;
    text-align: center;
    padding: 35px 40px 20px 20px;
 }
