--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,10 +9,11 @@ body{
 
 .header{
     height: 100px;  /* 70px */
-    font-size: 36px;
+    font-size: 80%;
     text-align: center;
+    padding:20px 0;
     background-color: #eee;
-    margin: 10px 10px 10px 10px; /* 10px 0 10px 0; */
+    margin: 10px 0 10px 0; /* 10px 0 10px 0; */
 }
 
 .glovalNavigation{
