--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,13 +3,13 @@
 	position: static;
 }
 body{
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
 }
 
 .header{
     height: 100px;  /* 70px */
-    font-size: 80%;
+    font-size: 100%;
     text-align: center;
     padding:20px 0;
     background-color: #eee;
@@ -25,12 +25,13 @@ body{
 
 .header-list li {
    float: left;
-   font-size: 20px;
+   font-size: 100%;
    list-style: none;
    font-color: #fff;
    margin: 0 auto;
    text-align: center;
-   padding: 35px 40px 20px 20px;
+   padding:20px 0;
+   /* padding: 35px 40px 20px 20px; */
 }
 
 main{
@@ -41,7 +42,7 @@ main{
 	max-width: 1000px;
 	max-height: 800px;  /*　*/
 
-  /*  margin: 10px 0 10px 0; */
+   margin: 10px 0 10px 0;
 
 }
 
