--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,27 +11,23 @@ body{
     height: 100px;  /* 70px */
     font-size: 100%;
     text-align: center;
-    padding:20px 0;
+    padding:35px 0;
     background-color: #eee;
     margin: 10px 0 10px 0; /* 10px 0 10px 0; */
 }
 
+li {
+	list-style: none;
+}
+	 
 .glovalNavigation{
     height: 70px;
+	font-size: 100%;
     text-align: center;
+	padding:35px 0;
     background-color: #888;
+	margin: 10px 0 10px 0;
     color: #fff;
-}
-
-.header-list li {
-   float: left;
-   font-size: 100%;
-   list-style: none;
-   font-color: #fff;
-   margin: 0 auto;
-   text-align: center;
-   padding:20px 0;
-   /* padding: 35px 40px 20px 20px; */
 }
 
 main{
