--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body{
 
 .header{
     height: 100px;  /* 70px */
-    font-size: 36px;
+    font-size: 36px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
     text-align: center;
     padding:35px 0;
     background-color: #eee;
@@ -22,7 +22,8 @@ li {
 	 
 .glovalNavigation{
     height: 70px;
-	font-size: 30px;
+	float: left;
+	font-size: 25px;
     text-align: center;
 	padding:35px 0;
     background-color: #888;
