--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ body{
     height: 100px;  /* 70px */
     font-size: 36px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
     text-align: center;
-    padding:35px 0;
+    padding:35px 35px;
     background-color: #eee;
     margin: 10px 0 10px 0; /* 10px 0 10px 0; */
 }
@@ -25,7 +25,7 @@ li {
 	float: left;
 	font-size: 25px;
     text-align: center;
-	padding:35px 0;
+	padding:35px 35px;
     background-color: #888;
 	margin: 10px 0 10px 0;
     color: #fff;
