--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,13 +9,16 @@ body{
 
 .header{
     height: 100px;  /* 70px */
-    font-size: 36px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
-    text-align: center;
-    padding:35px 35px;
     background-color: #eee;
     margin: 10px 0 10px 0; /* 10px 0 10px 0; */
 }
 
+.header-logo{
+    font-size: 25px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
+    text-align: center;
+    padding:35px 0px;
+}
+	
 li {
 	list-style: none;
 }
@@ -23,9 +26,7 @@ li {
 .glovalNavigation{
     height: 70px;
 	float: left;
-	font-size: 25px;
-    text-align: center;
-	padding:35px 35px;
+	font-size: 16px;
     background-color: #888;
 	margin: 10px 0 10px 0;
     color: #fff;
