--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,14 +19,16 @@ body{
     padding:35px 0px;
 }
 	
-li {
+.header-list li {
 	list-style: none;
+        float: left;
+	font-size: 16px;
+	text-align: center;
+        padding:16px 0px;
 }
 	 
 .glovalNavigation{
     height: 70px;
-	float: left;
-	font-size: 16px;
     background-color: #888;
 	margin: 10px 0 10px 0;
     color: #fff;
