--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,11 +14,17 @@ body{
 }
 
 .header-logo{
-
+    font-size: 25px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
+    text-align: center;
+    padding:35px 0px;
 }
 	
 .header-list li {
-
+	list-style: none;
+        float: left;
+	font-size: 16px;
+	text-align: center;
+        padding:16px 0px;
 }
 	 
 .glovalNavigation{
