--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,10 +21,10 @@ body{
 	
 .header-list li {
 	list-style: none;
-        float: left;
 	font-size: 16px;
+	display: inline;
 	text-align: center;
-        padding: 16px 0px;
+        padding: 35px 40px 20px 20px;
 }
 	 
 .glovalNavigation{
