--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@ body{
 
 .header-logo{
     font-size: 25px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
+    display: block;
     text-align: center;
     padding: 35px 40px 20px 20px;
 }
