--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,16 +15,17 @@ body{
 
 .header-logo{
     font-size: 25px;　/* "%"は親要素の文字サイズを基準にして決めたいときに使う単位 */
-    display: block;
+    display: block; /* display: flex; と text-align: center;の併用で文字列中央揃えはできないので、一旦display: block;に直す */
     text-align: center;
     padding: 35px 40px 20px 20px;
 }
 	
 .header-list li {
 	list-style: none;
-	font-size: 16px;
+	font-size: 18px;
 	display: inline;
-	text-align: center;
+	justify-content: center;
+	/* text-align: center; */
         padding: 35px 40px 20px 20px;
 }
 	 
