--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,13 +22,22 @@ body{
 
 ul {
 	list-style-type: none;
-	text-align: center; /* listの中央揃えでは、ul{}内にtext-align: center;を書く */
 	padding-left: 0;
+}
+li {
+	width: 50px;
+	height: 50px;
+	padding: 10px;
+	margin: 10px;
+}
+
+.header-list{
+	text-align: center; /* listの中央揃えでは、ul{}内にtext-align: center;を書く */
 }
 .header-list li {
 	font-size: 18px;
 	display: inline;
-        padding: 35px 40px 20px 20px;
+     /* padding: 35px 40px 20px 20px; */
 }
 	 
 .glovalNavigation{
