--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,31 +20,21 @@ body{
     padding: 35px 40px 20px 20px;
 }
 
-ul {
-	list-style-type: none;
+.glovalNavigation{
+    height: 70px;
+    background-color: #888;
+    margin: 10px 0 10px 0;
+    color: #fff;
+		list-style-type: none;
 	padding-left: 0;
 }
-li {
-	width: 50px;
-	height: 50px;
-	padding: 10px;
-	margin: 10px;
-}
-
-.header-list{
+.header-list ul {
 	text-align: center; /* listの中央揃えでは、ul{}内にtext-align: center;を書く */
 }
 .header-list li {
 	font-size: 18px;
 	display: inline;
      /* padding: 35px 40px 20px 20px; */
-}
-	 
-.glovalNavigation{
-    height: 70px;
-    background-color: #888;
-	margin: 10px 0 10px 0;
-    color: #fff;
 }
 
 main{
