--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ body{
 .header-list li {
 	font-size: 18px;
 	display: inline; /* リスト要素を縦から横並びに変換する */
-        /* padding: 35px 40px 20px 20px; 余白: [上][右][下][左] */
+        padding: 20px; 余白: [上][右][下][左] /* padding: 35px 40px 20px 20px; */
 }
 
 main{
