--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ body{
 	/* text-align: center;  listの中央揃えでは、ul{}内にtext-align: center;を書く */
 /* } */
 .header-list li {
-	font-size: 18px;
+	font-size: 4vh; /* 18px */
 	display: inline; /* リスト要素を縦から横並びに変換する */
         padding: 35px 40px; 余白: [上][右][下][左] /* padding: 35px 40px 20px 20px; */
 }
