--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@ body{
 	/* text-align: center;  listの中央揃えでは、ul{}内にtext-align: center;を書く */
 /* } */
 .header-list li {
-	font-size: 10px; /* 18px 4vh */
+	font-size: 15px; /* 10px 18px 4vh */
 	display: inline; /* リスト要素を縦から横並びに変換する */
         padding: 35px 40px; 余白: [上][右][下][左] /* padding: 35px 40px 20px 20px; */
 }
