--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,7 @@ body{
 	font-size: 17px; /* 15px 18px 4vh */
 	display: inline; /* リスト要素を縦から横並びに変換する */
 	vertical-align: middle; /* */
-        padding: 35px 40px 10px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
+        padding: 35px 40px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
 main{
