--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,9 +22,8 @@ body{
 
 .glovalNavigation{
     height: 70px;
-	/* font-size: 10px;  親 */
     background-color: #888;
-    margin: 10px 0 10px 0;
+    /* margin: 10px 0 10px 0; */
     color: #fff;
 	list-style-type: none; /* リスト先頭の黒丸を非表示 */
 	text-align: center; /* .header-list ul {}内ではなくこちらに書いたら中央揃えが適用された。(liの親box?)*/
@@ -36,7 +35,6 @@ body{
 .header-list li {
 	font-size: 17px; /* 15px 18px 4vh */
 	display: inline; /* リスト要素を縦から横並びに変換する */
-	/* vertical-align: middle;*/
         padding: 35px 40px 20px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
