--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ body{
 }
 
 .glovalNavigation{
-    height: 70px;
+    height: 60px; /* 70px */
     background-color: #888;
     margin: 10px 0 10px 0; /* margin: 15px 0 10px 0;  margin: 10px 0 10px 0; */
     color: #fff;
