--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,7 +92,7 @@ main{
 /* ##################### */
 
 .footer{
-    height: 165px; /* 70px 140px */
+    height: 170px; /* 165px 70px 140px */
     text-align: center;
     background-color: #eee;
 }
