--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,8 +3,8 @@
 	position: static;
 }
 body{
-    display: flex;
-    flex-direction: column;
+  /*  display: flex; */
+  /*  flex-direction: column; */
 }
 
 .header{
